--- a/data/templates/preview.html
+++ b/data/templates/preview.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>markItUp! preview template</title>
 <link rel="stylesheet" type="text/css" href="~/templates/preview.css" />
+<link rel="stylesheet" type="text/css" href="/layout/css/css_basic.css" />
 </head>
 <body>
 <!-- content -->
