What? A Bug? No way!
git-svn-id: http://svn.gn2-host4.de:8080/public/markitup/trunk@7 2f1e30e2-e202-4c38-a896-b52656e6da9c

--- a/data/skins/markitup/style.css
+++ b/data/skins/markitup/style.css
@@ -113,6 +113,7 @@
 	width:16px; height:16px;
 	text-indent:-10000px;
 	background-repeat:no-repeat;
+	overflow:hidden;
 	padding:3px;
 	margin:0px;
 }
