--- a/files/preview.css
+++ b/files/preview.css
@@ -13,5 +13,6 @@
 /* CSS STYLES FÜR PREVIEW */
 
 body {
-  background:#F9FDE9;
+  padding-left:10px;
+  background:white url(bg-editor-html.png) no-repeat -50px 0;
   }
